<resources>
    <string name="app_name">Chemia</string>
    <string name="tutorial_btn_text">Tutorial</string>
    <string name="draw_btn_txt">Draw</string>
    <string name="welc_tv_txt">Welcome to Chemia!</string>
    <string name="draw_page_welc_tv_txt">Welcome to the Draw Page!</string>
    <string name="tutorial_page_welc_tv_txt">Welcome to the Tutorial Page!</string>
    <string name="chemical_formula_tv">Chemical Formula</string>
    <string name="center_atom_tv">Center Atom</string>
    <string name="attached_elements_tv">Attached Elements</string>
    <string name="setCenterAtom_btn">Set</string>
    <string name="addAttachedElement_btn">+</string>
    <string name="subAttachedElement_btn">-</string>
    <string name="makeFormula_btn">Make Formula</string>
    <string name="resetFormula_btn">Reset</string>
    <string name="one_rdobtn">one</string>
    <string name="two_rdobtn">two</string>
    <string name="three_rdobtn">three</string>
    <string name="four_rdobtn">four</string>
    <string name="submitValenceNum_btn">Submit</string>
    <string name="correct_textColor">#42f468</string>
    <string name="correct_string">Correct!</string>
    <string name="correct_backgroundColor">#00ffffff</string>
    <string name="try_string">Try Again...</string>
    <string name="try_textColor">#e20000</string>
    <string name="try_backgroundColor">#00ffffff</string>
    <string name="selectOption_string">You need to select an option</string>
    <string name="selectOption_textColor">#dc42f4</string>
    <string name="selectOption_backgroundColor">#fffb3f</string>
    <string name="centerAtomNotSetAlert">You need to set the center atom before attaching any atoms</string>
    <string name="diatomicAlert">You cannot add anymore atoms because you have made a diatomic molecule</string>
    <string name="mysteryAlert">Mystery Error?</string>
    <string name="cannotSubtractAtomAlert">The atom you want to remove is not in this molecule. Try adding it before you remove it.</string>
    <string name="cannotSubtractCenterAtomAlert">You cannot subtract the center atom. Try setting a different atom as the center instead.</string>
    <string name="maxUniqueAtomsAlert">You cannot add any more elements. The maximum number of distinct elements is 3. Try removing some?</string>
    <string name="maxAtomsAlert">The maximum number of total atoms you can have in your molecule is 7. Try removing some?</string>
    <string name="badDiatomicAlert">By adding an element that is the same as the center atom, you\'re on your way to make a diatomic element. However, this element can\'t be diatomic. Sorry.</string>
    <string name="electroNegativityAlert">The element that you\'ve set for the center atom is more electronegative than one or more of the attached atoms. This molecule will therefore not work.</string>
    <string name="tooManyAttachedAlert">The atom that you have set as the center atom does not want this many attached atoms.</string>
    <string name="bondMisAlert">The number of bonds is not what was expected</string>
    <string name="electronMisPlaceAlert">This molecule can\'t be drawn in this app. There are either electrons needed or unwanted.</string>
    <string name="moleculeFieldAlert">There was an error inn the molecule. Please try again, or reach out to the developers to fix this.</string>
    <string name="ValenceQuestionAnnouncer">How many valence electrons does this formula have?</string>
    <string name="SkeletonQuestionAnnouncer">Select the appropriate Element for center/attached and give each attached a single bond.</string>
</resources>
